Fix crash exiting edit-mode with an active basis shape key

Exposed by T71865, while the bug remains this resolves the crash.